stylesheets/style.css
:root {
    --color-1: rgb(33, 33, 33);
    --primary: hsl(171, 100%, 41%);
}

body {
    margin: 0;
    padding: 0;
}

section{
    box-sizing: border-box;
}

a{
    text-decoration: none;
}


h1,
h2 {
    text-transform: uppercase;
    border-bottom: solid 3px hsla(171, 100%, 41%, 0.641);
}

.github-link {
    color: #bd2c00;
}

.github-link:hover {
    color: #dd3401;
}

.container h1 {
    font-weight: 700;
    font-size: 48px;
    display: inline-block;
    border-bottom: solid 3px var(--primary);
    margin-bottom: 3%;
}


.container h2 {
    font-weight: 500;
    font-size: 32px;
    display: inline-block;
    margin-bottom: 3.5%;
}

.navbar {
    border: none;
    position: fixed !important;
    top: 0;
    width: 100%;
    outline: none;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    background: transparent !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    -webkit-transition: 0.3s ease-in-out;
    -o-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out
}

/* adding the sliding bottom border */

.navbar::after {
    content: '';
    display: block;
    border-bottom: solid 3px var(--primary);
    width: 0;
    position: absolute;
    top: 52px;
    left: 0;
    -webkit-transition: 0.5s ease;
    -o-transition: 0.5s ease;
    transition: 0.5s ease;
    background: transparent;
}

.navbar:hover:after {
    width: 100%;
}


section p {
    font-weight: 400;
    font-size: 1.2rem;
}

.container {
    width: 90%;
    padding-top: 5%;
    padding-bottom: 5%;
}

.navbar-item,
.navbar-burger {
    text-transform: uppercase;
    color: whitesmoke !important;
    font-weight: 600;
    -webkit-transition: 0.2s ease-in-out;
    -o-transition: 0.2s ease-in-out;
    transition: 0.2s ease-in-out;
}

.navbar-burger span {
    border: solid 1px white;
}

/* nav for when you scroll to the bottom of the page */

.lower-nav {
    background: hsla(171, 100%, 41%, 0.7) !important;
    /* fallback for old browsers */
    /* background: -webkit-linear-gradient(to right, hsla(171, 100%, 41%, 0.7), hsla(82, 56%, 51%, 0.7)) !important; /* Chrome 10-25, Safari 5.1-6 */
    /* background: linear-gradient(to right, hsla(171, 100%, 41%, 0.7), hsla(82, 56%, 51%, 0.7)) !important;  */
}

.tag {
    margin-top: 10px;
    margin-right: 5px;
    min-width: 22%;
    background: hsla(171, 100%, 41%, 0.1) !important;
    color: whitesmoke !important;
    border: solid 1px hsla(171, 100%, 41%, 0.641) !important;
}

a.navbar-item:hover {
    color: var(--primary) !important;
}

a.lower-nav-items:hover {
    color: var(--color-1) !important;
}

.flex-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.flex-container p {
    margin: 0 auto;
    text-transform: uppercase;
}

.flex-container h1 {
    letter-spacing: 5px;
    margin: 0 auto;
    margin-bottom: 0px;
    border-bottom: none;
}

.flex-container h3 {
    letter-spacing: 5px;
    margin: 0 auto;
    text-transform: uppercase;
    font-weight: 500;
    font-size: 28px;
    margin-bottom: 5px;
    border-bottom: solid 2px whitesmoke;
}

/* pictures section */

#resume {
    height:100vh;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    align-items: center;
    color: whitesmoke;
    margin-bottom: 0;
}

#resume #arrow{
    font-size: 60px;
    position: absolute;
    bottom: 10px;
    transition: 0.5s ease-in-out;
    border-bottom: none;
}
#resume #arrow:hover{
    font-size: 60px;
    position: absolute;
    bottom: -10px;
}
#resume::after {
    content: "";
    display: block;
    position: absolute;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    top: 0;
    left: 0;
    background-image: url('/assets/images/first_pic_resume2.jpg');
    width: 100%;
    height: 100%;
    opacity: 0.8;
    z-index: -1;
}

#resume-button-section{
    width: 100%;
    min-height: 15vh;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, var(--primary), #96c93d);
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(left, var(--primary), #96c93d);
    background: -o-linear-gradient(left, var(--primary), #96c93d);
    background: linear-gradient(to right, var(--primary), #96c93d);
    background-size: 100% 100%;
    transition: 0.5s ease-in-out;
    display: flex;
    justify-content: center;
    align-items: center;
}


#resume-button-section:hover{
    transition: 0.5s ease-in-out;
    background-size: 200% 200%;
    -webkit-animation: Gradient 2s ease infinite;
	-moz-animation: Gradient 2s ease infinite;
	animation: Gradient 2s ease infinite;
}

#resume-button-section h1{
    text-decoration: none;
    border-bottom: none;
    color: whitesmoke;
    letter-spacing: 5px;
    font-weight: 500;
    font-size: 28px;
    transition: 0.3s ease-in-out;
}
#resume-button-section h1:hover{
    font-size: 32px;
    letter-spacing: 10px;
}


.control a {
    border: solid 3px white !important;
    border-radius: none;
    color: whitesmoke !important;
}

#skills {
    min-height: 100vh;
    position: relative;
    color: whitesmoke;
}

#skills::after {
    content: "";
    display: block;
    position: absolute;
    background-position: center;
    top: 0;
    left: 0;
    background-image: url('/assets/images/skills4.png');
    background-attachment: fixed;
    width: 100%;
    height: 100%;
    opacity: 0.8;
    z-index: -1;
    background-size: cover;
}

/* colored sections*/


@-webkit-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
        background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@-moz-keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}

@keyframes Gradient {
	0% {
		background-position: 0% 50%
	}
	50% {
		background-position: 100% 50%
	}
	100% {
		background-position: 0% 50%
	}
}


.colored-section {
    color: whitesmoke;
    background: var(--color-1);
}

#about {
    min-height: 50%;
    background: var(--color-1);
}

#projects {
    min-height: 100vh;
    background: var(--color-1);
}

#projects h3{
    margin-top: 40px;
    font-size:28px;
    color: whitesmoke;
}
.project-button {
    margin-top:10px;
    min-width: 20%;
}

.card{
    border-bottom: 3px solid var(--primary);
    border-top: 3px solid var(--primary);
    width: 60%;
    background-color: rgba(250, 248, 248, 0.950) !important;
}
.card-content .tag{
    min-width: 5%;
    background: var(--primary) !important;
}





#contact {
    min-height: 100vh;
    background: rgba(250, 248, 248, 0.621);
}

#contact-msg {
    font-size: 1.4rem;
    margin-bottom: 15px;
}

footer {
    height: 15vh;
    background: var(--primary);
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, var(--primary), #96c93d);
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(left, var(--primary), #96c93d);
    background: -o-linear-gradient(left, var(--primary), #96c93d);
    background: linear-gradient(to right, var(--primary), #96c93d);
    margin-bottom: 0;
    text-align: center;
    padding-top: 3vh;
}

footer a {
    margin: 10px;
    color: whitesmoke;
    font-size: 2em;
}

footer .container {
    padding-top: 0;
    padding-bottom: 0;
}

/* Resume button */

.button {
    -webkit-transition: 0.15s ease-in-out;
    -o-transition: 0.15s ease-in-out;
    transition: 0.15s ease-in-out;
}

/* media quaries */
@media only screen and (max-width: 668px) {
    .card{
        width: 100%;
    }
    .project-button {
        min-width: 40%;
    }
    #resume::after, #skills::after{
        background-attachment: scroll;
        /* FIX for the blank space caused by the 100vh and the address bar */
        min-height: 112vh;
    }
    #contact h1 {
        font-size: 38px !important;
    }
    #contact-msg {
        text-align: center;
        font-size: 1.2rem;
    }
    .flex-container {
        text-align: center;
    }
}

@media only screen and (max-width: 420px) {
    .tag {
        min-width: 45%;
    }
    .flex-container h3 {
        font-size: 22px;
    }

}

